--- a/Lista1/Lista1.vcxproj.filters
+++ b/Lista1/Lista1.vcxproj.filters
@@ -15,8 +15,11 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="pliki\main.cpp">
+    <ClCompile Include="Zad1.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Makefile" />
   </ItemGroup>
 </Project>
