--- a/Lista0/Lista0.vcxproj
+++ b/Lista0/Lista0.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{584213ab-a2d8-439e-9063-ad215871fea9}</ProjectGuid>
-    <RootNamespace>Lista1</RootNamespace>
+    <ProjectGuid>{4a71d4d7-c900-4f36-8f69-deff906904fb}</ProjectGuid>
+    <RootNamespace>Lista0</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,10 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="pliki\Zad1.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="pliki\Makefile" />
+    <ClCompile Include="Zad1.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
