--- a/Lista1/Lista1.vcxproj
+++ b/Lista1/Lista1.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{584213ab-a2d8-439e-9063-ad215871fea9}</ProjectGuid>
     <RootNamespace>Lista1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Lista01</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
