--- a/Zad5/Zad5.vcxproj
+++ b/Zad5/Zad5.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{b206ffaa-44d6-43f1-b8b5-fa38644bfaf7}</ProjectGuid>
     <RootNamespace>Zad5</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Zad05</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
