--- a/Zad8/Zad8.vcxproj
+++ b/Zad8/Zad8.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{e8cc14db-7cba-4b9f-b52e-4cfd2e4a35a6}</ProjectGuid>
     <RootNamespace>Zad8</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Zad08</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
